[gd_scene load_steps=20 format=3 uid="uid://db2h3t17k37pe"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_1d73w"]
[ext_resource type="Material" uid="uid://b4s0xnt1f6lia" path="res://Materials/Green.tres" id="1_o5nrg"]
[ext_resource type="Material" uid="uid://bi1h4xe7msjwi" path="res://Materials/Pink.tres" id="3_irgfk"]
[ext_resource type="Material" uid="uid://b122sws3pt7w7" path="res://Materials/Red.tres" id="4_nuwel"]
[ext_resource type="Material" uid="uid://p2nkjd3ge3qm" path="res://Materials/Blue.tres" id="5_te4rd"]
[ext_resource type="Script" path="res://interface/mouse_sensitivity_slider.gd" id="6_e3uym"]
[ext_resource type="LabelSettings" uid="uid://chn5tbuebt4po" path="res://interface/sub_settings_style.tres" id="7_ukli0"]
[ext_resource type="LabelSettings" uid="uid://kkicv3y74p3a" path="res://interface/settings_style.tres" id="8_rui4k"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5lq0h"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_f6bkd"]
sky_material = SubResource("ProceduralSkyMaterial_5lq0h")

[sub_resource type="Environment" id="Environment_g2h84"]
background_mode = 2
sky = SubResource("Sky_f6bkd")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xc2g5"]

[sub_resource type="Gradient" id="Gradient_r4tnx"]
offsets = PackedFloat32Array(0.7, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_714p4"]
gradient = SubResource("Gradient_r4tnx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gpsvd"]
albedo_color = Color(1, 0, 1, 1)
albedo_texture = SubResource("GradientTexture1D_714p4")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wydro"]

[sub_resource type="GDScript" id="GDScript_xtiph"]
resource_name = "pause_menu"
script/source = "extends Control

func _ready():
	visible = false

func _input(event):
	if event.is_action_pressed(\"pause\"):
		var paused_state = not get_tree().paused
		get_tree().paused = paused_state
		visible = paused_state
		if paused_state:
			Input.mouse_mode = Input.MOUSE_MODE_VISIBLE
		else:
			Input.mouse_mode = Input.MOUSE_MODE_CAPTURED
			
"

[sub_resource type="GDScript" id="GDScript_kjov5"]
script/source = "extends VBoxContainer

const DYNAMIC_SPRINT = \"DYNAMIC_SPRINT_TEXT\"
const TOGGLE_SPRINT = \"TOGGLE_SPRINT_TEXT\"
const HOLD_SPRINT = \"HOLD_SPRINT_TEXT\"
const SPRINT_OPTIONS = [DYNAMIC_SPRINT, TOGGLE_SPRINT, HOLD_SPRINT]

# Called when the node enters the scene tree for the first time.
func _ready():
	var value = %mouse_sensitivity.value
	var sensLabel = $current_sens
	sensLabel.text = str(value*100)
	var sprintDescription = $sprint_mode_description
	if SPRINT_OPTIONS[%sprint_mode.get_selected_id()]:
		sprintDescription.text = SPRINT_OPTIONS[%sprint_mode.get_selected_id()]
	else:
		sprintDescription.text = \"UI_SPRINT_MODE_DEFAULT\"


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_mouse_sensitivity_value_changed(value):
	var sensLabel = $current_sens
	sensLabel.text = str(value*100)

func _on_sprint_mode_item_selected(index):
	var sprintDescription = $sprint_mode_description
	if SPRINT_OPTIONS[index]:
		sprintDescription.text = SPRINT_OPTIONS[index]
	else:
		sprintDescription.text = \"UI_SPRINT_MODE_DEFAULT\"
"

[sub_resource type="LabelSettings" id="LabelSettings_pqssu"]
font_size = 40
outline_size = 5
outline_color = Color(0, 0, 0, 0.545098)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.384314)

[node name="World" type="Node3D"]

[node name="Map" type="Node3D" parent="."]

[node name="Wall_3D2" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -29.5653)
material_override = ExtResource("3_irgfk")
use_collision = true
size = Vector3(52.4636, 5.83948, 1)

[node name="Wall_3D3" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29.3824)
use_collision = true
size = Vector3(52.4636, 5.83948, 1)
material = ExtResource("3_irgfk")

[node name="Wall_3D4" type="CSGBox3D" parent="Map"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -26, 0, 0.382374)
material_override = ExtResource("3_irgfk")
use_collision = true
size = Vector3(60, 5.83948, 1)

[node name="Wall_3D5" type="CSGBox3D" parent="Map"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 26, 0, 0.382374)
material_override = ExtResource("3_irgfk")
use_collision = true
size = Vector3(60, 5.83948, 1)

[node name="CSGBox3D9" type="CSGBox3D" parent="Map"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 12.0089, -1.75813, -4.25457)
material_override = ExtResource("4_nuwel")
use_collision = true
size = Vector3(4, 5.83948, 4)

[node name="CSGBox3D6" type="CSGBox3D" parent="Map"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, -2.2637, -1.67649)
material_override = ExtResource("4_nuwel")
use_collision = true
size = Vector3(4, 5.83948, 4)

[node name="CSGBox3D10" type="CSGBox3D" parent="Map"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 15.9059, -0.170859, -9.34985)
material_override = ExtResource("5_te4rd")
use_collision = true
size = Vector3(4, 5.83948, 9.77442)

[node name="CSGBox3D7" type="CSGBox3D" parent="Map"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, -0.967948, -6.49431)
material_override = ExtResource("5_te4rd")
use_collision = true
size = Vector3(4, 5.83948, 4)

[node name="CSGBox3D8" type="CSGBox3D" parent="Map"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11.8835, -0.42779, -10.2338)
material_override = ExtResource("4_nuwel")
use_collision = true
size = Vector3(4, 8, 4)

[node name="Floor_Block" type="CSGBox3D" parent="Map"]
material_override = ExtResource("1_o5nrg")
use_collision = true
size = Vector3(52.2363, 0.002, 59.575)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Map"]
environment = SubResource("Environment_g2h84")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Map"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
script = ExtResource("1_1d73w")

[node name="Body" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_xc2g5")
surface_material_override/0 = SubResource("StandardMaterial3D_gpsvd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wydro")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67939, 0)

[node name="Camera3D" type="Camera3D" parent="Player/Head"]

[node name="velocity_label" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="PAUSE_CANVAS" type="CanvasLayer" parent="."]
process_mode = 3
layer = 128

[node name="PAUSE_MENU" type="Control" parent="PAUSE_CANVAS"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_xtiph")

[node name="background_block" type="ColorRect" parent="PAUSE_CANVAS/PAUSE_MENU"]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.388235)

[node name="settings_menu" type="VBoxContainer" parent="PAUSE_CANVAS/PAUSE_MENU"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_kjov5")

[node name="mouse_sens_label" type="Label" parent="PAUSE_CANVAS/PAUSE_MENU/settings_menu"]
layout_mode = 2
text = "UI_MOUSE_SENSITIVITY_TXT"
label_settings = SubResource("LabelSettings_pqssu")
clip_text = true

[node name="mouse_sensitivity" type="HSlider" parent="PAUSE_CANVAS/PAUSE_MENU/settings_menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Adjusts the speed at which tthe camer moves when you move your mouse."
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.01
tick_count = 30
ticks_on_borders = true
script = ExtResource("6_e3uym")

[node name="current_sens" type="Label" parent="PAUSE_CANVAS/PAUSE_MENU/settings_menu"]
layout_mode = 2
text = "10"
label_settings = ExtResource("7_ukli0")

[node name="sprint_mode_label" type="Label" parent="PAUSE_CANVAS/PAUSE_MENU/settings_menu"]
layout_mode = 2
text = "UI_SPRINT_MODE_TXT"
label_settings = ExtResource("8_rui4k")

[node name="sprint_mode" type="OptionButton" parent="PAUSE_CANVAS/PAUSE_MENU/settings_menu"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "UI_SPRINT_MODE_DEFAULT"
keep_pressed_outside = true
item_count = 3
selected = 0
allow_reselect = true
popup/item_0/text = "UI_DYNAMIC_SPRINT"
popup/item_0/id = 0
popup/item_1/text = "UI_TOGGLE_SPRINT"
popup/item_1/id = 1
popup/item_2/text = "UI_HOLD_SPRINT"
popup/item_2/id = 2

[node name="sprint_mode_description" type="Label" parent="PAUSE_CANVAS/PAUSE_MENU/settings_menu"]
layout_mode = 2
text = "UI_SPRINT_MODE_DEFAULT"
label_settings = ExtResource("7_ukli0")

[connection signal="value_changed" from="PAUSE_CANVAS/PAUSE_MENU/settings_menu/mouse_sensitivity" to="PAUSE_CANVAS/PAUSE_MENU/settings_menu" method="_on_mouse_sensitivity_value_changed" flags=18]
[connection signal="item_focused" from="PAUSE_CANVAS/PAUSE_MENU/settings_menu/sprint_mode" to="PAUSE_CANVAS/PAUSE_MENU/settings_menu" method="_on_sprint_mode_item_focused" flags=18]
[connection signal="item_selected" from="PAUSE_CANVAS/PAUSE_MENU/settings_menu/sprint_mode" to="PAUSE_CANVAS/PAUSE_MENU/settings_menu" method="_on_sprint_mode_item_selected"]
